--- a/index.html
+++ b/index.html
@@ -1,29 +1,39 @@
 <!DOCTYPE html>
-<p><strong>HELENA:</strong> Ay, do. Persever, counterfeit sad looks,<br>
-Make mouths upon me when I turn my back,<br>
-Wink each at other, hold the sweet jest up-<br>
-This sport, well carried, shall be chronicled.</p>
+<style>
+  p {
+    font-size: 14px;
+    line-height: 1.6;
+    width: 600px;
+    margin-left: 20px;
+  }
 
-<p>If you have any pity, grace, or manners,<br>
-You would not make me such an argument.<br>
-But fare ye well. 'Tis partly my own fault,<br>
-Which death or absence soon shall remedy.</p>
+  a {
+    text-decoration: none;
+    color: rgb(6, 69, 173);
+  }
 
-<p><strong>LYSANDER:</strong> Stay, gentle Helena. Hear my excuse.<br>
-My love, my life, my soul, fair Helena!</p>
+  h1 {
+    font-family: Georgia, Times, serif;
+    font-size: 25px;
+    line-height: 1.3;
+    margin-bottom: -10px;
+    margin-top: 20px;
+    margin-left: 20px;
+    border-bottom: 1px solid darkgray;
+    font-weight: normal;
+  }
+</style>
+<h1>Tim Berners-Lee</h1>
+<p>From Wikipedia, the free encyclopedia</p>
+<p>
+<strong>Sir Timothy John</strong> "<strong>Tim</strong>" <strong>Berners-Lee</strong>, (born 8 June 1955), also known as <strong>TimBL</strong>, is an English computer scientist, best known as the inventor of the <a href="https://en.wikipedia.org/wiki/World_Wide_Web">World Wide Web</a>. He made a proposal for an information management system in March 1989,
+ and he implemented the first successful communication between a <a href="https://en.wikipedia.org/wiki/Hypertext_Transfer_Protocol">Hypertext Transfer Protocol (HTTP)</a> client and server via the Internet sometime around mid-November of that same year.
+</p>
 
-<p><strong>HELENA:</strong> Oh, excellent!</p>
+<p>
+Berners-Lee is the director of the <a href="https://en.wikipedia.org/wiki/World_Wide_Web_Consortium">World Wide Web Consortium</a>, which oversees the Web's continued development. He is also the founder of the <a href="https://en.wikipedia.org/wiki/World_Wide_Web_Foundation">World Wide Web Foundation</a>, and is a senior researcher and holder of the Founders Chair at the <a href="https://en.wikipedia.org/wiki/MIT_Computer_Science_and_Artificial_Intelligence_Laboratory">MIT Computer Science and Artificial Intelligence Laboratory</a>.
+</p>
 
-<p><strong>HERMIA <em>(to LYSANDER)</em>:</strong> Sweet, do not scorn her so.</p>
-
-<p><strong>DEMETRIUS:</strong> If she cannot entreat, I can compel.</p>
-
-<p><strong>LYSANDER:</strong> Thou canst compel no more than she entreat.<br>
-Thy threats have no more strength than her weak prayers.-<br>
-Helen, I love thee. By my life, I do.<br>
-I swear by that which I will lose for thee<br>
-To prove him false that says I love thee not.</p>
-
-<p><strong>DEMETRIUS:</strong> I say I love thee more than he can do.</p>
-
-<p><strong>LYSANDER:</strong> If thou say so, withdraw and prove it too.</p>
+<p>
+In 2004, Berners-Lee was knighted by <a href="https://en.wikipedia.org/wiki/Elizabeth_II">Queen Elizabeth II</a> for his pioneering work. He was honoured as the "Inventor of the World Wide Web" during the <a href="https://en.wikipedia.org/wiki/2012_Summer_Olympics_opening_ceremony">2012 Summer Olympics opening ceremony</a>.
+</p>
