--- a/index.html
+++ b/index.html
@@ -1,39 +1,35 @@
 <!DOCTYPE html>
 <style>
-  p {
-    font-size: 14px;
-    line-height: 1.6;
-    width: 600px;
-    margin-left: 20px;
-  }
-
-  a {
-    text-decoration: none;
-    color: rgb(6, 69, 173);
-  }
-
-  h1 {
-    font-family: Georgia, Times, serif;
-    font-size: 25px;
-    line-height: 1.3;
-    margin-bottom: -10px;
-    margin-top: 20px;
-    margin-left: 20px;
-    border-bottom: 1px solid darkgray;
-    font-weight: normal;
-  }
+p {
+  font-size: 20px;
+  margin-bottom: 30px;
+  margin-top: 30px;
+  width: 700px;
+  line-height: 1.6;
+  margin-left: auto;
+  margin-right: auto;
+}
+h1 {
+  text-align: center;
+  line-height: 1.6;
+}
 </style>
-<h1>Tim Berners-Lee</h1>
-<p>From Wikipedia, the free encyclopedia</p>
+<img src="hero.jpg" alt="Cropped triangular front of the Pantheon in Rome." style="width:100%">
+<h1>Day 5 - Rome</h1>
+
 <p>
-<strong>Sir Timothy John</strong> "<strong>Tim</strong>" <strong>Berners-Lee</strong>, (born 8 June 1955), also known as <strong>TimBL</strong>, is an English computer scientist, best known as the inventor of the <a href="https://en.wikipedia.org/wiki/World_Wide_Web">World Wide Web</a>. He made a proposal for an information management system in March 1989,
- and he implemented the first successful communication between a <a href="https://en.wikipedia.org/wiki/Hypertext_Transfer_Protocol">Hypertext Transfer Protocol (HTTP)</a> client and server via the Internet sometime around mid-November of that same year.
+So today we decided to visit the Pantheon, it was pretty awesome on the inside but those photos didn't turn out so well. I've included a picture from the outside, you can see how crowded it was!
 </p>
 
 <p>
-Berners-Lee is the director of the <a href="https://en.wikipedia.org/wiki/World_Wide_Web_Consortium">World Wide Web Consortium</a>, which oversees the Web's continued development. He is also the founder of the <a href="https://en.wikipedia.org/wiki/World_Wide_Web_Foundation">World Wide Web Foundation</a>, and is a senior researcher and holder of the Founders Chair at the <a href="https://en.wikipedia.org/wiki/MIT_Computer_Science_and_Artificial_Intelligence_Laboratory">MIT Computer Science and Artificial Intelligence Laboratory</a>.
+The Colosseum is also a must-see for any trip to Rome, it's huge! And it's hard to get a photo which really captures how big it is. The line at the colosseum was long, but if you buy tickets online and show the barcode on your phone it's much faster. The museum inside was pretty awesome too, and comes with an audio guide.
 </p>
 
 <p>
-In 2004, Berners-Lee was knighted by <a href="https://en.wikipedia.org/wiki/Elizabeth_II">Queen Elizabeth II</a> for his pioneering work. He was honoured as the "Inventor of the World Wide Web" during the <a href="https://en.wikipedia.org/wiki/2012_Summer_Olympics_opening_ceremony">2012 Summer Olympics opening ceremony</a>.
+We found a little gladiator helmet at a souvenir store, so we had to buy it for Federbear. It's a bit big and surprisingly heavy, we think it's actually meant to be a paperweight.
 </p>
+<p><img src="colosseum.jpg" alt="Inside the ruin of the Colosseum with bear wearing gladiator helmet." style="height:150px"> <img src="trevi.jpg" alt="The Trevi Fountain." style="height:150px"> <img src="pantheon.jpg" alt="Outside view of the Pantheon." style="height:150px"> <img src="inside.jpg" alt="Inside, looking up at the domed ceiling of the Pantheon." style="height:150px"></p>
+<p>
+As a last bit of fun, I'm not sure where this was from, but this Lion has the weirdest facial expression, and check out the tiny bird perched on top!
+</p>
+<p><img src="lion.jpg" alt="Statue of a lion with a small bird on the head." style="width:700px"></p>
