--- a/poem.html
+++ b/poem.html
@@ -1,1 +1,58 @@
-
+<!DOCTYPE html>
+<link rel="stylesheet" href="poem.css">
+<h1>Half-Caste</h1>
+<h2>By <span class="bold">John Agard</span></h2>
+<p>
+ Excuse me<br>
+ standing on one leg<br>
+ I'm half-caste<br>
+ Explain yuself<br>
+ wha yu mean<br>
+ when yu say half-caste<br>
+ yu mean when Picasso<br>
+ mix red an green<br>
+ is a half-caste canvas/<br>
+ explain yuself<br>
+ wha yu mean<br>
+ when yu say half-caste<br>
+ yu mean when light an shadow<br>
+ mix in de sky<br>
+ is a half-caste weather<br>
+ well in dat case<br>
+ england weather<br>
+ nearly always half-caste<br>
+ in fact some o dem cloud<br>
+ half - caste till dem overcast<br>
+ so spiteful dem don ' t want de sun pass<br>
+ ah rass/<br>
+ explain yuself<br>
+ wha yu mean when yu say half-caste<br>
+ yu mean tchaikovsky<br>
+ sit down at dah piano<br>
+ an mix a black key<br>
+ wid a white key<br>
+ is a half - caste symphony<br>
+ Explain yuself<br>
+ wha yu mean<br>
+ Ah listening to yu wid de keen<br>
+ half of mih ear<br>
+ Ah looking at yu wid de keen<br>
+ half of mih eye<br>
+ an when I ' m introduced to yu<br>
+ I ' m sure you ' ll understand<br>
+ why I offer yu half-a-hand<br>
+ an when I sleep at night<br>
+ I close half-a-eye<br>
+ consequently when I dream<br>
+ I dream half-a-dream<br>
+ an when moon begin to glow<br>
+ I half-caste human being<br>
+ cast half-a-shadow<br>
+ but yu must come back tomorrow<br>
+ wid de whole of yu eye<br>
+ an de whole of yu ear<br>
+ an de whole of yu mind<br>
+ an I will tell yu<br>
+ de other half<br>
+ of my story
+</p>
