--- a/poem.html
+++ b/poem.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="poem.css">
+<link rel="poem stylesheet" href="poem.css">
 <h1>Half-Caste</h1>
 <h2>By <span class="bold">John Agard</span></h2>
 <p>
