--- a/poem.html
+++ b/poem.html
@@ -4,18 +4,18 @@
 <h2>By <span class="bold">John Agard</span></h2>
 <p class="poem">
  Excuse me<br>
- <span style="background-color:red">standing on one leg</span><br>
+ <span style="background-color:skyblue">standing on one leg</span><br>
  I'm half-caste<br>
  Explain yuself<br>
  wha yu mean<br>
  when yu say half-caste<br>
- <span style="background-color:red">yu mean when Picasso<br>
+ <span style="background-color:skyblue">yu mean when Picasso<br>
  mix red an green<br>
  is a half-caste canvas/</span><br>
  explain yuself<br>
  wha yu mean<br>
  when yu say half-caste<br>
- <span style="background-color:red">yu mean when light an shadow<br>
+ <span style="background-color:skyblue">yu mean when light an shadow<br>
  mix in de sky<br>
  is a half-caste weather<br>
  well in dat case<br>
@@ -27,7 +27,7 @@
  ah rass/<br>
  explain yuself<br>
  wha yu mean when yu say half-caste<br>
- <span style="background-color:red">yu mean tchaikovsky<br>
+ <span style="background-color:skyblue">yu mean tchaikovsky<br>
  sit down at dah piano<br>
  an mix a black key<br>
  wid a white key<br>
