--- a/javier.html
+++ b/javier.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<link rel="stylesheet" href="javier.css">
+<h1>Profile Page</h1>
+<p>
+Hi my name is Javier, I am studying computer science at school and am practicing my HTML, CSS and JavaScript.
+</p>
+<h3>Here are some links to other websites I have created:</h3>
+<p>
+<ul>
+<li><a href="JavierRT7.github.io/poem.html">My poem page</a></li>
+<li><a href="JavierRT7.github.io/quiz.html">A quiz for you to try out</a></li>
+</ul>
+</p>
