--- a/poem.html
+++ b/poem.html
@@ -57,6 +57,7 @@
  de other half<br>
  of my story
 </p>
+<h2>Now for some analysis</h2>
 <p class="notes">In the highlighted parts of the poem. John Agard uses examples of things we might see as normal to make the notion of calling someone "half-caste" seem ridiculous, which it is.</p>
 <p class="notes"><a href="https://en.wikipedia.org/wiki/John_Agard">John Agard</a> grew up in <a href="https://en.wikipedia.org/wiki/Georgetown,_Guyana">Georgetown, British Guiana</a>.<br>
 He loved to listen to cricket commentary on the radio and began making up his own, which led to a love of language.<br>
