--- a/quiz.html
+++ b/quiz.html
@@ -1,1 +1,211 @@
+<!DOCTYPE html>
+<link rel="stylesheet" href="quiz.css">
+<h1>Try my quiz!</h1>
+<p style="width: 400px;"><strong>What is the scientific name of the western lowland gorilla?</strong></p>
+<input id="answer1">
+<button id="button1">Check answer</button>
+<h1 id="result1">...</h1>
 
+<script>
+function clickAction1() {
+  result1.textContent = "Nope!"
+ if (answer1.value == "gorilla gorilla gorilla") {
+   result1.textContent = "You got it!";
+   result1.classList.add('correct')
+ }
+};
+function inputAction1() {
+  result1.textContent = "..."
+}
+  answer1.oninput = inputAction1
+  button1.onclick = clickAction1
+
+</script>
+<p style="width: 400px;"><strong>What is the capital of Burkina Faso?</strong></p>
+<input id="answer2">
+<button id="button2">Check answer</button>
+<h1 id="result2">...</h1>
+
+<script>
+function clickAction2() {
+  result2.textContent = "Nope!"
+ if (answer2.value == "Ouagadougou") {
+   result2.textContent = "You got it!";
+   result2.classList.add('correct')
+ }
+};
+function inputAction2() {
+  result2.textContent = "..."
+}
+  answer2.oninput = inputAction2
+  button2.onclick = clickAction2
+
+</script>
+<p style="width: 400px;"><strong>How many deer are there in the world?</strong></p>
+<input id="answer3">
+<button id="button3">Check answer</button>
+<h1 id="result3">...</h1>
+
+<script>
+function clickAction3() {
+  result3.textContent = "Nope!"
+ if (answer3.value == "30 million") {
+   result3.textContent = "You got it!";
+   result3.classList.add('correct')
+ }
+  if (answer3.value == "30000000") {
+   result3.textContent = "You got it!";
+   result3.classList.add('correct')
+ }
+  if (answer3.value == "30,000,000") {
+   result3.textContent = "You got it!";
+   result3.classList.add('correct')
+ }
+};
+function inputAction3() {
+  result3.textContent = "..."
+}
+  answer3.oninput = inputAction3
+  button3.onclick = clickAction3
+
+</script>
+<p style="width: 400px;"><strong>Which country has the longest coastline in the world?</strong></p>
+<input id="answer4">
+<button id="button4">Check answer</button>
+<h1 id="result4">...</h1>
+
+<script>
+function clickAction4() {
+  result4.textContent = "Nope!"
+ if (answer4.value == "Canada") {
+   result4.textContent = "You got it!";
+   result4.classList.add('correct')
+ }
+};
+function inputAction4() {
+  result4.textContent = "..."
+}
+  answer4.oninput = inputAction4
+  button4.onclick = clickAction4
+
+</script>
+<p style="width: 400px;"><strong>Who is the tallest man ever?</strong></p>
+<input id="answer5">
+<button id="button5">Check answer</button>
+<h1 id="result5">...</h1>
+
+<script>
+function clickAction5() {
+  result5.textContent = "Nope!"
+ if (answer5.value == "Robert Wadlow") {
+   result5.textContent = "You got it!";
+   result5.classList.add('correct')
+ }
+};
+function inputAction5() {
+  result5.textContent = "..."
+}
+  answer5.oninput = inputAction5
+  button5.onclick = clickAction5
+
+</script>
+<p style="width: 400px;"><strong>What is the longest word in the English language?</strong></p>
+<input id="answer6">
+<button id="button6">Check answer</button>
+<h1 id="result6">...</h1>
+
+<script>
+function clickAction6() {
+  result6.textContent = "Nope!"
+ if (answer6.value == "pneumonoultramicroscopicsilicovolcanoconiosis") {
+   result6.textContent = "You got it!";
+   result6.classList.add('correct')
+ }
+};
+function inputAction6() {
+  result6.textContent = "..."
+}
+  answer6.oninput = inputAction6
+  button6.onclick = clickAction6
+
+</script>
+<p style="width: 400px;"><strong>How many countries are there in the world?</strong></p>
+<input id="answer7">
+<button id="button7">Check answer</button>
+<h1 id="result7">...</h1>
+
+<script>
+function clickAction7() {
+  result7.textContent = "Nope!"
+ if (answer7.value == "195") {
+   result7.textContent = "You got it!";
+   result7.classList.add('correct')
+ }
+};
+function inputAction7() {
+  result7.textContent = "..."
+}
+  answer7.oninput = inputAction7
+  button7.onclick = clickAction7
+
+</script>
+<p style="width: 400px;"><strong>How old is Tom Jones?</strong></p>
+<input id="answer8">
+<button id="button8">Check answer</button>
+<h1 id="result8">...</h1>
+
+<script>
+function clickAction8() {
+  result8.textContent = "Nope!"
+ if (answer8.value == "79") {
+   result8.textContent = "You got it!";
+   result8.classList.add('correct')
+ }
+};
+function inputAction8() {
+  result8.textContent = "..."
+}
+  answer8.oninput = inputAction8
+  button8.onclick = clickAction8
+
+</script>
+<p style="width: 400px;"><strong>Which year was the French revolution?</strong></p>
+<input id="answer9">
+<button id="button9">Check answer</button>
+<h1 id="result9">...</h1>
+
+<script>
+function clickAction9() {
+  result9.textContent = "Nope!"
+ if (answer9.value == "1789") {
+   result9.textContent = "You got it!";
+   result9.classList.add('correct')
+ }
+};
+function inputAction9() {
+  result9.textContent = "..."
+}
+  answer9.oninput = inputAction9
+  button9.onclick = clickAction9
+
+</script>
+<p style="width: 400px;"><strong>How long was the Titanic in meters?</strong></p>
+<input id="answer10">
+<button id="button10">Check answer</button>
+<h1 id="result10">...</h1>
+
+<script>
+function clickAction10() {
+  result10.textContent = "Nope!"
+ if (answer10.value == "269") {
+   result10.textContent = "You got it!";
+   result10.classList.add('correct')
+ }
+};
+function inputAction10() {
+  result10.textContent = "..."
+}
+  answer10.oninput = inputAction10
+  button10.onclick = clickAction10
+
+</script>
