--- a/quiz.html
+++ b/quiz.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="quiz.css">
 <h1>Try my quiz!</h1>
 <p style="width: 400px;"><strong>What is the scientific name of the western lowland gorilla?</strong></p>
-<input id="answer1">
+<p><input id="answer1"></p>
 <button id="button1">Check answer</button>
 <h1 id="result1">...</h1>
 
@@ -11,7 +11,7 @@ function clickAction1() {
   result1.textContent = "Nope!"
  if (answer1.value == "gorilla gorilla gorilla") {
    result1.textContent = "You got it!";
-   result1.classList.add('correct')
+   result1.classList.add('correct');
  }
 };
 function inputAction1() {
@@ -22,7 +22,7 @@ function inputAction1() {
 
 </script>
 <p style="width: 400px;"><strong>What is the capital of Burkina Faso?</strong></p>
-<input id="answer2">
+<p><input id="answer2"></p>
 <button id="button2">Check answer</button>
 <h1 id="result2">...</h1>
 
@@ -42,7 +42,7 @@ function inputAction2() {
 
 </script>
 <p style="width: 400px;"><strong>How many deer are there in the world?</strong></p>
-<input id="answer3">
+<p><input id="answer3"></p>
 <button id="button3">Check answer</button>
 <h1 id="result3">...</h1>
 
@@ -50,14 +50,6 @@ function inputAction2() {
 function clickAction3() {
   result3.textContent = "Nope!"
  if (answer3.value == "30 million") {
-   result3.textContent = "You got it!";
-   result3.classList.add('correct')
- }
-  if (answer3.value == "30000000") {
-   result3.textContent = "You got it!";
-   result3.classList.add('correct')
- }
-  if (answer3.value == "30,000,000") {
    result3.textContent = "You got it!";
    result3.classList.add('correct')
  }
@@ -70,7 +62,7 @@ function inputAction3() {
 
 </script>
 <p style="width: 400px;"><strong>Which country has the longest coastline in the world?</strong></p>
-<input id="answer4">
+<p><input id="answer4"></p>
 <button id="button4">Check answer</button>
 <h1 id="result4">...</h1>
 
@@ -90,7 +82,7 @@ function inputAction4() {
 
 </script>
 <p style="width: 400px;"><strong>Who is the tallest man ever?</strong></p>
-<input id="answer5">
+<p><input id="answer5"></p>
 <button id="button5">Check answer</button>
 <h1 id="result5">...</h1>
 
@@ -110,7 +102,7 @@ function inputAction5() {
 
 </script>
 <p style="width: 400px;"><strong>What is the longest word in the English language?</strong></p>
-<input id="answer6">
+<p><input id="answer6"></p>
 <button id="button6">Check answer</button>
 <h1 id="result6">...</h1>
 
@@ -130,7 +122,7 @@ function inputAction6() {
 
 </script>
 <p style="width: 400px;"><strong>How many countries are there in the world?</strong></p>
-<input id="answer7">
+<p><input id="answer7"></p>
 <button id="button7">Check answer</button>
 <h1 id="result7">...</h1>
 
@@ -150,7 +142,7 @@ function inputAction7() {
 
 </script>
 <p style="width: 400px;"><strong>How old is Tom Jones?</strong></p>
-<input id="answer8">
+<p><input id="answer8"></p>
 <button id="button8">Check answer</button>
 <h1 id="result8">...</h1>
 
@@ -170,7 +162,7 @@ function inputAction8() {
 
 </script>
 <p style="width: 400px;"><strong>Which year was the French revolution?</strong></p>
-<input id="answer9">
+<p><input id="answer9"></p>
 <button id="button9">Check answer</button>
 <h1 id="result9">...</h1>
 
@@ -190,7 +182,7 @@ function inputAction9() {
 
 </script>
 <p style="width: 400px;"><strong>How long was the Titanic in meters?</strong></p>
-<input id="answer10">
+<p><input id="answer10"></p>
 <button id="button10">Check answer</button>
 <h1 id="result10">...</h1>
 
