--- a/quiz.html
+++ b/quiz.html
@@ -3,7 +3,7 @@
 <h1>Try my quiz!</h1>
 <p style="width: 400px;"><strong>What is the scientific name of the western lowland gorilla?</strong></p>
 <p><input id="answer1"></p>
-<button id="button1">Check answer</button>
+<p><button id="button1">Check answer</button></p>
 <h1 id="result1">...</h1>
 
 <script>
@@ -23,7 +23,7 @@ function inputAction1() {
 </script>
 <p style="width: 400px;"><strong>What is the capital of Burkina Faso?</strong></p>
 <p><input id="answer2"></p>
-<button id="button2">Check answer</button>
+<p><button id="button2">Check answer</button></p>
 <h1 id="result2">...</h1>
 
 <script>
@@ -43,7 +43,7 @@ function inputAction2() {
 </script>
 <p style="width: 400px;"><strong>How many deer are there in the world?</strong></p>
 <p><input id="answer3"></p>
-<button id="button3">Check answer</button>
+<p><button id="button3">Check answer</button></p>
 <h1 id="result3">...</h1>
 
 <script>
@@ -63,7 +63,7 @@ function inputAction3() {
 </script>
 <p style="width: 400px;"><strong>Which country has the longest coastline in the world?</strong></p>
 <p><input id="answer4"></p>
-<button id="button4">Check answer</button>
+<p><button id="button4">Check answer</button></p>
 <h1 id="result4">...</h1>
 
 <script>
@@ -83,7 +83,7 @@ function inputAction4() {
 </script>
 <p style="width: 400px;"><strong>Who is the tallest man ever?</strong></p>
 <p><input id="answer5"></p>
-<button id="button5">Check answer</button>
+<p><button id="button5">Check answer</button></p>
 <h1 id="result5">...</h1>
 
 <script>
@@ -103,7 +103,7 @@ function inputAction5() {
 </script>
 <p style="width: 400px;"><strong>What is the longest word in the English language?</strong></p>
 <p><input id="answer6"></p>
-<button id="button6">Check answer</button>
+<p><button id="button6">Check answer</button></p>
 <h1 id="result6">...</h1>
 
 <script>
@@ -123,7 +123,7 @@ function inputAction6() {
 </script>
 <p style="width: 400px;"><strong>How many countries are there in the world?</strong></p>
 <p><input id="answer7"></p>
-<button id="button7">Check answer</button>
+<p><button id="button7">Check answer</button></p>
 <h1 id="result7">...</h1>
 
 <script>
@@ -143,7 +143,7 @@ function inputAction7() {
 </script>
 <p style="width: 400px;"><strong>How old is Tom Jones?</strong></p>
 <p><input id="answer8"></p>
-<button id="button8">Check answer</button>
+<p><button id="button8">Check answer</button></p>
 <h1 id="result8">...</h1>
 
 <script>
@@ -163,7 +163,7 @@ function inputAction8() {
 </script>
 <p style="width: 400px;"><strong>Which year was the French revolution?</strong></p>
 <p><input id="answer9"></p>
-<button id="button9">Check answer</button>
+<p><button id="button9">Check answer</button></p>
 <h1 id="result9">...</h1>
 
 <script>
@@ -183,7 +183,7 @@ function inputAction9() {
 </script>
 <p style="width: 400px;"><strong>How long was the Titanic in meters?</strong></p>
 <p><input id="answer10"></p>
-<button id="button10">Check answer</button>
+<p><button id="button10">Check answer</button></p>
 <h1 id="result10">...</h1>
 
 <script>
