--- a/quiz.html
+++ b/quiz.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <link rel="stylesheet" href="quiz.css">
 <h1>Try my quiz!</h1>
-<p style="width: 400px;"><strong>What is the scientific name of the western lowland gorilla?</strong></p>
+<p><strong>What is the scientific name of the western lowland gorilla?</strong></p>
 <p><input id="answer1"></p>
 <p><button id="button1">Check answer</button></p>
 <h1 id="result1">...</h1>
@@ -21,7 +21,7 @@ function inputAction1() {
   button1.onclick = clickAction1
 
 </script>
-<p style="width: 400px;"><strong>What is the capital of Burkina Faso?</strong></p>
+<p><strong>What is the capital of Burkina Faso?</strong></p>
 <p><input id="answer2"></p>
 <p><button id="button2">Check answer</button></p>
 <h1 id="result2">...</h1>
@@ -41,7 +41,7 @@ function inputAction2() {
   button2.onclick = clickAction2
 
 </script>
-<p style="width: 400px;"><strong>How many deer are there in the world?</strong></p>
+<p><strong>How many deer are there in the world?</strong></p>
 <p><input id="answer3"></p>
 <p><button id="button3">Check answer</button></p>
 <h1 id="result3">...</h1>
@@ -61,7 +61,7 @@ function inputAction3() {
   button3.onclick = clickAction3
 
 </script>
-<p style="width: 400px;"><strong>Which country has the longest coastline in the world?</strong></p>
+<p><strong>Which country has the longest coastline in the world?</strong></p>
 <p><input id="answer4"></p>
 <p><button id="button4">Check answer</button></p>
 <h1 id="result4">...</h1>
@@ -81,7 +81,7 @@ function inputAction4() {
   button4.onclick = clickAction4
 
 </script>
-<p style="width: 400px;"><strong>Who is the tallest man ever?</strong></p>
+<p><strong>Who is the tallest man ever?</strong></p>
 <p><input id="answer5"></p>
 <p><button id="button5">Check answer</button></p>
 <h1 id="result5">...</h1>
@@ -101,7 +101,7 @@ function inputAction5() {
   button5.onclick = clickAction5
 
 </script>
-<p style="width: 400px;"><strong>What is the longest word in the English language?</strong></p>
+<p><strong>What is the longest word in the English language?</strong></p>
 <p><input id="answer6"></p>
 <p><button id="button6">Check answer</button></p>
 <h1 id="result6">...</h1>
@@ -121,7 +121,7 @@ function inputAction6() {
   button6.onclick = clickAction6
 
 </script>
-<p style="width: 400px;"><strong>How many countries are there in the world?</strong></p>
+<p><strong>How many countries are there in the world?</strong></p>
 <p><input id="answer7"></p>
 <p><button id="button7">Check answer</button></p>
 <h1 id="result7">...</h1>
@@ -141,7 +141,7 @@ function inputAction7() {
   button7.onclick = clickAction7
 
 </script>
-<p style="width: 400px;"><strong>How old is Tom Jones?</strong></p>
+<p><strong>How old is Tom Jones?</strong></p>
 <p><input id="answer8"></p>
 <p><button id="button8">Check answer</button></p>
 <h1 id="result8">...</h1>
@@ -161,7 +161,7 @@ function inputAction8() {
   button8.onclick = clickAction8
 
 </script>
-<p style="width: 400px;"><strong>Which year was the French revolution?</strong></p>
+<p><strong>Which year was the French revolution?</strong></p>
 <p><input id="answer9"></p>
 <p><button id="button9">Check answer</button></p>
 <h1 id="result9">...</h1>
@@ -181,7 +181,7 @@ function inputAction9() {
   button9.onclick = clickAction9
 
 </script>
-<p style="width: 400px;"><strong>How long was the Titanic in meters?</strong></p>
+<p><strong>How long was the Titanic in meters?</strong></p>
 <p><input id="answer10"></p>
 <p><button id="button10">Check answer</button></p>
 <h1 id="result10">...</h1>
