--- a/index.html
+++ b/index.html
@@ -1,35 +1,13 @@
 <!DOCTYPE html>
-<style>
-p {
-  font-size: 20px;
-  margin-bottom: 30px;
-  margin-top: 30px;
-  width: 700px;
-  line-height: 1.6;
-  margin-left: auto;
-  margin-right: auto;
-}
-h1 {
-  text-align: center;
-  line-height: 1.6;
-}
-</style>
-<img src="hero.jpg" alt="Cropped triangular front of the Pantheon in Rome." style="width:100%">
-<h1>Day 5 - Rome</h1>
-
+<link rel="stylesheet" href="javier.css">
+<h1>Profile Page</h1>
 <p>
-So today we decided to visit the Pantheon, it was pretty awesome on the inside but those photos didn't turn out so well. I've included a picture from the outside, you can see how crowded it was!
+Hi my name is Javier, I am studying computer science at school and am practicing my HTML, CSS and JavaScript.
 </p>
-
+<h3>Here are some links to other websites I have created:</h3>
 <p>
-The Colosseum is also a must-see for any trip to Rome, it's huge! And it's hard to get a photo which really captures how big it is. The line at the colosseum was long, but if you buy tickets online and show the barcode on your phone it's much faster. The museum inside was pretty awesome too, and comes with an audio guide.
+<ul>
+<li><a href="JavierRT7.github.io/poem.html">My poem page</a></li>
+<li><a href="JavierRT7.github.io/quiz.html">A quiz for you to try out</a></li>
+</ul>
 </p>
-
-<p>
-We found a little gladiator helmet at a souvenir store, so we had to buy it for Federbear. It's a bit big and surprisingly heavy, we think it's actually meant to be a paperweight.
-</p>
-<p><img src="colosseum.jpg" alt="Inside the ruin of the Colosseum with bear wearing gladiator helmet." style="height:150px"> <img src="trevi.jpg" alt="The Trevi Fountain." style="height:150px"> <img src="pantheon.jpg" alt="Outside view of the Pantheon." style="height:150px"> <img src="inside.jpg" alt="Inside, looking up at the domed ceiling of the Pantheon." style="height:150px"></p>
-<p>
-As a last bit of fun, I'm not sure where this was from, but this Lion has the weirdest facial expression, and check out the tiny bird perched on top!
-</p>
-<p><img src="lion.jpg" alt="Statue of a lion with a small bird on the head." style="width:700px"></p>
