--- a/javier.html
+++ b/javier.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="javier.css">
-<h1>Profile Page</h1>
+<link rel="stylesheet" href="javier3.css">
+<h1>My Favourite Things<h1>
 <p>
-Hi my name is Javier, I am studying computer science at school and am practicing my HTML, CSS and JavaScript.
-</p>
-<h3>Here are some links to other websites I have created:</h3>
-<p>
+<h2>Food:<h2>
 <ul>
-<li><a href="JavierRT7.github.io/poem.html">My poem page</a></li>
-<li><a href="JavierRT7.github.io/quiz.html">A quiz for you to try out</a></li>
+<li><a href="https://www.mcdonalds.com/gb/en-gb.html">McDonald's</a></li>
+<li><a href="https://themeatandwineco.com/">Meat and Wine Co</a></li>
+</ul>
+</p>
+<p>
+<h2>Racing:<h2>
+<ul>
+<li><a href="https://www.codemasters.com/game/f1-2019/">F1 2019</a></li>
+<li><a href="https://www.gran-turismo.com/us/gtsport/top/">GT Sport</a></li>
+<li><a href="https://gtsrl.tv/">My racing league - GTSRL</a></li>
+<li><a href="https://www.kudosprime.com/gts/stats.php?profile=4346255">My stats on GT Sport</a></li>
 </ul>
 </p>
