--- a/quiz.html
+++ b/quiz.html
@@ -70,11 +70,13 @@ function clickAction3() {
 
 </script>
 <p><strong>Which country has the longest coastline in the world?</strong></p>
-<label><input id="answer41" type="checkbox">Mexico</label>
-<label><input id="answer42" type="checkbox">Russia</label>
-<label><input id="answer43" type="checkbox">Australia</label>
-<label><input id="answer44" type="checkbox">Canada</label>
+<p>
+<label><input id="answer41" type="checkbox">Mexico</label><br>
+<label><input id="answer42" type="checkbox">Russia</label><br>
+<label><input id="answer43" type="checkbox">Australia</label><br>
+<label><input id="answer44" type="checkbox">Canada</label><br>
 <label><input id="answer45" type="checkbox">Greenland</label>
+</p>
 <p><button id="button4">Check answer</button></p>
 <h1 id="result4">...</h1>
 
