--- a/quiz.html
+++ b/quiz.html
@@ -245,7 +245,7 @@ function showScore() {
   score3.classList.add('score');
 }
 function comment() {
-  if (score3.textContent == "0") {
+  if (score3.value == "0") {
     comment.textContent = "How did you get them all wrong?";
 } else if (score3.textContent == "1") {
     comment.textContent = "I mean... at least you got one right...";
