--- a/quiz.html
+++ b/quiz.html
@@ -237,7 +237,7 @@ function inputAction10() {
 
 </script>
 <p><button id="showscore">Show Score</button></p>
-<h2 class="score4">Your score was: </h2><h2 class="blank" id="score3">...</h2>
+<p><h2 class="score4">Your score was: </h2><h2 class="blank" id="score3">...</h2></p>
 <h1 id="comment">...</h1>
 <script>
 function showScore() {
